--- a/Kafka.Producer/Kafka.Producer.csproj
+++ b/Kafka.Producer/Kafka.Producer.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Confluent.Kafka" Version="2.10.0" />
+  </ItemGroup>
+
 </Project>
